<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camara" android:icon="@drawable/tab_main_home"
            android:title="@string/main_tab_home" />
        <item android:id="@+id/nav_gallery" android:icon="@drawable/tab_main_topic"
            android:title="@string/main_tab_topic" />
        <item android:id="@+id/nav_slideshow" android:icon="@drawable/tab_main_job"
            android:title="@string/main_tab_job" />
        <item android:id="@+id/nav_manage" android:icon="@drawable/tab_main_my"
            android:title="@string/main_tab_my" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>